Bug 1797099 - Ensure the SurfacePattern transform is invertible. r=aosmond

Differential Revision: https://phabricator.services.mozilla.com/D160091